docs(adr): 0003 — why fsync sits where it does, what each policy promises, and the amplification arithmetic
The decision record for the durable write: the byte layout and what each field
earns; the five places a force happens and the one sentence of fsync(2) that
decides the directory rule (with the sentence that argues against the
truncate-and-fsync choice, recorded rather than dropped); the ack rule and the
promise of each menu entry in a table; the torn-tail rules as classify -> cut ->
lemma, including why the recovery marker is an audit record and not a
resurrection guard; write amplification as arithmetic and as measured bytes,
which locates group commit's win in the page rather than the syscall; the
alternatives (payload-only CRC, offset-derived sequence, skip-don't-cut,
per-record version, mmap, O_DSYNC, O_DIRECT, RocksDB); and what this hands the
checkpoint, idempotency, concurrency, TLC, chaos and metrics tickets as rules.

README: ADR 0003 row, the new `crash` command row, and a Status section that
stops claiming nothing is durable.